test/testfile_emulator-5554_17.txt
--------- beginning of main
F/BIFUZ_BROADCAST( 1326): adb -s emulator-5554 shell am broadcast -n com.android.bluetooth/com.android.bluetooth.pbap.BluetoothPbapReceiver 
D/AndroidRuntime( 1328): 
D/AndroidRuntime( 1328): >>>>>> AndroidRuntime START com.android.internal.os.RuntimeInit <<<<<<
D/AndroidRuntime( 1328): CheckJNI is ON
D/dalvikvm( 1328): Trying to load lib libjavacore.so 0x0
D/dalvikvm( 1328): Added shared lib libjavacore.so 0x0
D/dalvikvm( 1328): Trying to load lib libnativehelper.so 0x0
D/dalvikvm( 1328): Added shared lib libnativehelper.so 0x0
D/dalvikvm( 1328): No JNI_OnLoad found in libnativehelper.so 0x0, skipping init
D/dalvikvm( 1328): Note: class Landroid/app/ActivityManagerNative; has 179 unimplemented (abstract) methods
E/memtrack( 1328): Couldn't load memtrack module (No such file or directory)
E/android.os.Debug( 1328): failed to load memtrack module: -2
D/AndroidRuntime( 1328): Calling main entry com.android.commands.am.Am
--------- beginning of system
I/ActivityManager(  359): Start proc com.android.bluetooth for broadcast com.android.bluetooth/.pbap.BluetoothPbapReceiver: pid=1339 uid=1002 gids={41002, 3003, 3002, 3001, 1028, 1015, 3005, 1016, 3008}
D/AdapterServiceConfig( 1339): Adding HeadsetService
D/AdapterServiceConfig( 1339): Adding A2dpService
D/AdapterServiceConfig( 1339): Adding HidService
D/AdapterServiceConfig( 1339): Adding HealthService
D/AdapterServiceConfig( 1339): Adding PanService
D/AdapterServiceConfig( 1339): Adding GattService
D/AdapterServiceConfig( 1339): Adding BluetoothMapService
D/AndroidRuntime( 1328): Shutting down VM
D/jdwp    ( 1328): Got wake-up signal, bailing out of select
D/dalvikvm( 1328): Debugger has detached; object registry had 1 entries
D/AndroidRuntime( 1339): Shutting down VM
W/dalvikvm( 1339): threadid=1: thread exiting with uncaught exception (group=0xb3a40d70)
E/AndroidRuntime( 1339): FATAL EXCEPTION: main
E/AndroidRuntime( 1339): Process: com.android.bluetooth, PID: 1339
E/AndroidRuntime( 1339): java.lang.RuntimeException: Unable to start receiver com.android.bluetooth.pbap.BluetoothPbapReceiver: java.lang.NullPointerException
E/AndroidRuntime( 1339): 	at android.app.ActivityThread.handleReceiver(ActivityThread.java:2439)
E/AndroidRuntime( 1339): 	at android.app.ActivityThread.access$1700(ActivityThread.java:138)
E/AndroidRuntime( 1339): 	at android.app.ActivityThread$H.handleMessage(ActivityThread.java:1285)
E/AndroidRuntime( 1339): 	at android.os.Handler.dispatchMessage(Handler.java:102)
E/AndroidRuntime( 1339): 	at android.os.Looper.loop(Looper.java:136)
E/AndroidRuntime( 1339): 	at android.app.ActivityThread.main(ActivityThread.java:5026)
E/AndroidRuntime( 1339): 	at java.lang.reflect.Method.invokeNative(Native Method)
E/AndroidRuntime( 1339): 	at java.lang.reflect.Method.invoke(Method.java:515)
E/AndroidRuntime( 1339): 	at com.android.internal.os.ZygoteInit$MethodAndArgsCaller.run(ZygoteInit.java:777)
E/AndroidRuntime( 1339): 	at com.android.internal.os.ZygoteInit.main(ZygoteInit.java:602)
E/AndroidRuntime( 1339): 	at dalvik.system.NativeStart.main(Native Method)
E/AndroidRuntime( 1339): Caused by: java.lang.NullPointerException
E/AndroidRuntime( 1339): 	at com.android.bluetooth.pbap.BluetoothPbapReceiver.onReceive(BluetoothPbapReceiver.java:59)
E/AndroidRuntime( 1339): 	at android.app.ActivityThread.handleReceiver(ActivityThread.java:2432)
E/AndroidRuntime( 1339): 	... 10 more
I/WearableConn(  484): Connecting via TCP to /10.0.2.2:5601
W/WearableConn(  484): Error writing to device, error: failed to connect to /10.0.2.2 (port 5601): connect failed: ECONNREFUSED (Connection refused)
I/WearableConn(  484): Socket closed
I/WearableConn(  484): Waiting 4.0 seconds to retry connection
